tests/paczka1/small_fuzzy/13710029.err
Error in line 6: pj7 S710 16,F
Error in line 13: ChB2atPRjVZ S710 88,7
Error in line 14: ChB2atPRjVZ A558 76,1
